@@ -4264,6 +4264,12 @@ CREATEFUNCTION ST_ConvexHull(geometry)
     AS '@MODULE_FILENAME@','convexhull'
     LANGUAGE 'C' _IMMUTABLE_STRICT; -- WITH (isstrict,iscachable);
 
+-- Availability: 1.3.3
+CREATEFUNCTION ST_SimplifyPreserveTopology(geometry, float8)
+    RETURNS geometry
+    AS '@MODULE_FILENAME@','topologypreservesimplify'
+    LANGUAGE 'C' _IMMUTABLE_STRICT; -- WITH (isstrict,iscachable);
+
 -- Deprecation in 1.2.3
 CREATEFUNCTION difference(geometry,geometry)
 	RETURNS geometry
